# EnlargeYourFrench

./: .gitignore  README.md  games.py  main.py  requirements.txt  scores.py  wikidict.py
mattermost/: Dockerfile  README.md  docker-compose.yaml  engine.py  eyf.py  game_player.py  i18n_en.py  i18n_fr.py  pyproject.toml  scores.py  wikidict.py
mattermost/data/: wikidict.fr.txt  wikidict.simple.en.txt  wikidict.simple.fr.txt
