[tool.poetry]
name = "enlarge-your-french"
version = "0.1.0"
description = ""
authors = ["mortrevere <donttalktome@leshauts.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mmpy-bot = "^2.1.4"
loguru = "^0.7.2"
httpx = "^0.27.2"
python-levenshtein = "^0.25.1"
wikitextparser = "^0.56.2"
requests = "^2.32.3"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
